--- a/style.css
+++ b/style.css
@@ -146,3 +146,15 @@ body {
   color: #fff;
   border: 2px solid #000;
 }
+
+/* Adaptacion a movil */
+
+@media (max-width: 420px) {
+  /* Header Page */
+  .header-page h1 {
+    font-size: 2rem;
+  }
+  .inputs input {
+    width: 9rem;
+  }
+}
