--- a/style.css
+++ b/style.css
@@ -100,10 +100,14 @@ body {
   color: #000;
 }
 
-#password {
+#password, #error {
   text-align: center;
   margin-top: 1rem;
   color: #008000;
+}
+
+#error {
+  color: #ff0000;
 }
 
 .alert-cont {
